# multi-language-bazel-monorepo

./: .bazelrc  .gitignore  BUILD.bazel  README.md  WORKSPACE.bazel  package.json  tsconfig.json
.github/workflows/: test.yml
projects/go_hello_world/: BUILD.bazel
projects/go_web/: BUILD.bazel
projects/golang/go_hello_world/: BUILD.bazel
projects/golang/go_web/: BUILD.bazel  main.go
projects/node_calculator/: BUILD.bazel  calculator.spec.js
projects/node_web/: BUILD.bazel  index.js
projects/nodejs/node_calculator/: BUILD.bazel
projects/nodejs/node_web/: BUILD.bazel
projects/projectA/: BUILD.bazel
projects/projectB/: BUILD.bazel
projects/py_calculator/: BUILD.bazel  calculator_test.py
projects/py_web/: BUILD.bazel  main.py
projects/python/py_calculator/: BUILD.bazel  calculator_test.py
projects/python/py_web/: BUILD.bazel  py_web.py
projects/typescript/lib/: BUILD.bazel  package.json
projects/typescript/lib/src/: calculator.spec.ts  calculator.ts
projects/typescript/ts_web/: BUILD.bazel  package.json  tsconfig.app.json
projects/typescript/ts_web/src/: index.ts
