load("@npm//@bazel/typescript:index.bzl", "ts_project")
load("@build_bazel_rules_nodejs//:index.bzl", "js_library")

ts_project(
    name = "build",
    srcs = glob(
        include = ["**/*.ts"],
        exclude = ["**/*spec.ts"],
    ),
    tsconfig = {
        "compilerOptions": {
            "rootDir": "src",
            "outDir": "dist",
            "declaration": True,
        }
    },
)

js_library(
    name = "@libs/calculator",
    package_name = "@libs/calculator",
    srcs = ["package.json"],
    visibility = ["//projects/typescript:__subpackages__"],
    deps = [":build"],
)

# load("@npm//@bazel/jasmine:index.bzl", "jasmine_node_test")

# ts_project(
#     name = "test_spec",
#     srcs = glob(["**/*spec.ts"]),
#     tsconfig = {
#         "compilerOptions": {
#             "target": "ES2015",
#             "module": "commonjs",
#             "rootDir": "src",
#             "outDir": "dist",
#             "declaration": True,
#         }
#     },
#     deps = [
#         ":build",
#         "@npm//@types/jasmine",
#         "@npm//jasmine",
#     ],
# )

# jasmine_node_test(
#     name = "calculator_test",
#     deps = [
#         ":test_spec",
#     ],
# )
