load("@npm//@bazel/typescript:index.bzl", "ts_project", "ts_config")
load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")

ts_config(
    name = "tsconfig_app",
    src = "tsconfig.app.json",
    deps = ["//:tsconfig.json"],
)

ts_project(
    name = "app",
    declaration = True,
    tsconfig = ":tsconfig_app",
    root_dir = "src",
    out_dir = "dist",
    # tsconfig = {
    #     "compilerOptions": {
    #         "rootDir": "src",
    #         "outDir": "dist",
    #         "moduleResolution": "node",
    #         "esModuleInterop": True
    #     },
    # },
    deps = [
        "//projects/typescript/lib:@libs/calculator",
        "@npm//express",
    ],
)

# nodejs_binary(
#     name = "ts_web",
#     data = [":app"],
#     entry_point = "dist/index.js",
# )
